# beacon

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  compose.yaml  docker-compose.yml  pyproject.toml
skills/beacon-logging/: SKILL.md
src/beacon/: __init__.py  cli.py  config.py  main.py
src/beacon/api/: __init__.py  deps.py  routes.py
src/beacon/client/: __init__.py  _client.py  demo.py  remote_sink.py
src/beacon/database/: __init__.py  session.py
src/beacon/models/: __init__.py  log_entry.py  system_snapshot.py
src/beacon/services/: __init__.py  system_stats.py  tasks.py
src/beacon/templates/: base.html  task_logs.html  tasks.html
src/beacon/templates/partials/: log_lines.html  system_stats.html  task_list.html  task_sys_stats.html
